--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -1,292 +1,293 @@
 /*  Css - Cascading Style Sheets  | page-landing  */
 
 #page-study #container {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .page-header {
-    background-color: var(--color-primary);
-    
-    display: flex;
-    flex-direction: column;
+  background-color: var(--color-primary);
+  
+  display: flex;
+  flex-direction: column;
 }
 
 .page-header .top-bar-container {
-    width: 90%;
-    margin: 0 auto;
+  width: 90%;
+  margin: 0 auto;
 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    padding: 1.6rem 0;
+  padding: 1.6rem 0;
 }
 
 .page-header .top-bar-container a {
-    height: 3.2rem;
-    transition: opacity 0.2s;
+  height: 3.2rem;
+  transition: opacity 0.2s;
 }
 
 .page-header .top-bar-container a:hover {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 .page-header .top-bar-container img {
-    height: 1.6rem;
+  height: 1.6rem;
 }
 
 .page-header .header-content {
-    width: 90%;
-    margin: 3.2rem auto;
+  width: 90%;
+  margin: 3.2rem auto;
 
-    position: relative; /*mega importante para posição do menu desktop */
+  position: relative; /*mega importante para posição do menu desktop */
 }
 
 .page-header .header-content strong {
-    font: 700 3.6rem Archivo;
-    line-height: 4.2rem;
-    color: var(--color-title-in-primary);
+  font: 700 3.6rem Archivo;
+  line-height: 4.2rem;
+  color: var(--color-title-in-primary);
 }
 
 #search-teachers {
-    margin-top: 3.2rem;
+  margin-top: 3.2rem;
 }
 
 #search-teachers label {
-    color: var(--color-title-in-primary);
+  color: var(--color-title-in-primary);
 }
 
 #search-teachers .select-block {
-    margin-bottom: 1.4rem;
+  margin-bottom: 1.4rem;
 }
 
 #search-teachers button {
-    width: 100%;
-    height: 5.6rem;
-    background: var(--color-secondary);
-    color: var(--color-button-text);
-    border: 0;
-    border-radius: .8rem;
-    cursor: pointer;
-    font: 700 1.6rem Archivo;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    transition: background 0.2s;
-    margin-top: 3.2rem;
+  width: 100%;
+  height: 5.6rem;
+  background: var(--color-secondary);
+  color: var(--color-button-text);
+  border: 0;
+  border-radius: .8rem;
+  cursor: pointer;
+  font: 700 1.6rem Archivo;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  transition: background 0.2s;
+  margin-top: 3.2rem;
 }
 
 #search-teachers button:hover {
-    background-color: var(--color-secondary-dark);
+  background-color: var(--color-secondary-dark);
 }
 
+/* Formulários 
 .select-block label,
 .input-block label {
-    font-size: 1.4rem;
-    color: var(--color-text-complement);
+  font-size: 1.4rem;
+  color: var(--color-text-complement);
 }
 
 .input-block input,
 .select-block select {
-    width: 100%;
-    height: 5.6rem;
-    margin-top: 0.8rem;
-    border-radius: 0.8rem;
-    background: var(--color-input-background);
-    border: 1px solid var(--color-line-in-white);
-    outline: 0;
-    padding: 0 1.6rem;
-    font: 1.6rem Archivo;
+  width: 100%;
+  height: 5.6rem;
+  margin-top: 0.8rem;
+  border-radius: 0.8rem;
+  background: var(--color-input-background);
+  border: 1px solid var(--color-line-in-white);
+  outline: 0;
+  padding: 0 1.6rem;
+  font: 1.6rem Archivo;
 }
 
 .input-block {
-    position: relative;
+  position: relative;
 }
 
-/* posicionamento dinâmico da linha sobre o input box */
+/* posicionamento dinâmico da linha sobre o input box 
 .input-block:focus-within::after {
-    content:"";
+  content:"";
 
-    width: calc(100% - 3.2rem);
-    height: 2px;
-    background: var(--color-primary-light);
+  width: calc(100% - 3.2rem);
+  height: 2px;
+  background: var(--color-primary-light);
 
-    position: absolute;
-    left: 1.6rem;
-    right: 1.6rem;
-    bottom: 0px;
+  position: absolute;
+  left: 1.6rem;
+  right: 1.6rem;
+  bottom: 0px;
+}
+/* Final Formulários */
+
+/* Atenção a essa parte  */
+#page-study main {
+  margin: 3.2rem auto;
+  width: 90%;
 }
 
-/* Atenção a essa parte */
+.teacher-item {
+  background-color: var(--color-box-base);
+  border: 1px solid var(--color-line-in-whiite);
+  border-radius: .8rem;
+  margin-top: 2.4rem;
+}
 
-#page-study main {
-    margin: 3.2rem auto;
-    width: 90%;
-  }
-  
-  .teacher-item {
-    background-color: var(--color-box-base);
-    border: 1px solid var(--color-line-in-whiite);
-    border-radius: .8rem;
-    margin-top: 2.4rem;
-  }
-  
-  .teacher-item header {
-    padding: 3.2rem 2rem;
-    display: flex;
-    align-items: center;
-  }
-  
-  .teacher-item header img {
-    width: 8rem;
-    height: 8rem;
-    border-radius: 50%;
-  }
-  
-  .teacher-item header div {
-    margin-left: 2.4rem;
-  }
-  
-  .teacher-item header div strong {
-    font: 700 2.4rem Archivo;
-    display: block;
-    color: var(--color-text-title);
-  }
-  
-  .teacher-item header div span {
-    font-size: 1.6rem;
-    display: block;
-    margin-top: .4rem;
-  }
-  
+.teacher-item header {
+  padding: 3.2rem 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.teacher-item header img {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+}
+
+.teacher-item header div {
+  margin-left: 2.4rem;
+}
+
+.teacher-item header div strong {
+  font: 700 2.4rem Archivo;
+  display: block;
+  color: var(--color-text-title);
+}
+
+.teacher-item header div span {
+  font-size: 1.6rem;
+  display: block;
+  margin-top: .4rem;
+}
+
 /* O sinal ">" antes do "p" simboliza os níveis de parágrafo; sem ele o texto não alinha corretamente */
-  .teacher-item > p {
-    padding: 0 2rem;
-    font-size: 1.6rem;
-    line-height: 2.8rem;
-  }
-  
-  .teacher-item footer {
-    padding: 3.2rem 2rem;
-    background-color: var(--color-box-footer);
-    border-top: 1px solid var(--color-line-in-white);
-    margin-top: 3.2rem;
-  
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .teacher-item footer p {
-    font-size: 1.4rem;
-    line-height: 2.4rem;
-    color: var(--color-text-complement);
-  }
-  
-  .teacher-item footer p strong {
-    font-size: 1.6rem;
-    color: var(--color-primary);
-    display: block;
-  }
-  
-  .teacher-item footer button {
-    width: 20rem;
-    height: 5.6rem;
-    background: var(--color-secondary);
-    color: var(--color-button-text);
-    border: 0;
-    border-radius: .8rem;
-    cursor: pointer;
-    font: 700 1.4rem Archivo;
-  
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-  
-    text-decoration: none;
-  
-    transition: background 0.2s;
-    margin-left: 1.6rem;
-  }
-  
-  .teacher-item footer button:hover {
-    background: var(--color-secondary-dark);
-  }
-  
+.teacher-item > p {
+  padding: 0 2rem;
+  font-size: 1.6rem;
+  line-height: 2.8rem;
+}
+
+.teacher-item footer {
+  padding: 3.2rem 2rem;
+  background-color: var(--color-box-footer);
+  border-top: 1px solid var(--color-line-in-white);
+  margin-top: 3.2rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.teacher-item footer p {
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  color: var(--color-text-complement);
+}
+
+.teacher-item footer p strong {
+  font-size: 1.6rem;
+  color: var(--color-primary);
+  display: block;
+}
+
+.teacher-item footer button {
+  width: 20rem;
+  height: 5.6rem;
+  background: var(--color-secondary);
+  color: var(--color-button-text);
+  border: 0;
+  border-radius: .8rem;
+  cursor: pointer;
+  font: 700 1.4rem Archivo;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+  text-decoration: none;
+
+  transition: background 0.2s;
+  margin-left: 1.6rem;
+}
+
+.teacher-item footer button:hover {
+  background: var(--color-secondary-dark);
+}
+
 /* Media Queries */
 
-  @media (min-width: 700px) {
-    #page-study #container {
-      max-width: 100vw;
-    }
-  
-    .page-header {
-      height: 340px;
-    }
-  
-    .page-header .top-bar-container {
-      max-width: 1100px;
-    }
-  
-    .page-header .header-content {
-      max-width: 740px;
-  
-      margin: 0 auto;
-  
-      flex: 1 1;
-      padding-bottom: 48px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-  
-    .page-header .header-content strong {
-      max-width: 350px;
-    }
-  
-    .teacher-item header,
-    .teacher-item footer {
-      padding: 32px;
-    }
-  
-    #search-teachers {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 16px;
-      position: absolute;
-      bottom: -28px;
-    }
-  
-    #page-study main {
-      padding: 32px 0;
-      max-width: 740px;
-      margin: 0 auto;
-    }
-  
-    #search-teachers .select-block {
-      margin-bottom: 0;
-    }
-  
-    /* O sinal ">" antes do "p" simboliza os níveis de parágrafo; sem ele o texto não alinha corretamente */
-    .teacher-item > p {
-      padding: 0 32px;
-    }
-  
-    .teacher-item footer p strong {
-      display: initial;
-      margin-left: 16px;
-    }
-  
-    .teacher-item footer button {
-      width: 245px;
-      font-size: 16px;
-      justify-content: center;
-      font-weight: 600;
-    }
-  
-    .teacher-item footer button img {
-      margin-right: 16px;
-    }
+@media (min-width: 700px) {
+  #page-study #container {
+    max-width: 100vw;
   }
+
+  .page-header {
+    height: 340px;
+  }
+
+  .page-header .top-bar-container {
+    max-width: 1100px;
+  }
+
+  .page-header .header-content {
+    max-width: 740px;
+
+    margin: 0 auto;
+
+    flex: 1 1;
+    padding-bottom: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .page-header .header-content strong {
+    max-width: 350px;
+  }
+
+  .teacher-item header,
+  .teacher-item footer {
+    padding: 32px;
+  }
+
+  #search-teachers {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
+    position: absolute;
+    bottom: -28px;
+  }
+
+  #page-study main {
+    padding: 32px 0;
+    max-width: 740px;
+    margin: 0 auto;
+  }
+
+  #search-teachers .select-block {
+    margin-bottom: 0;
+  }
+
+  /* O sinal ">" antes do "p" simboliza os níveis de parágrafo; sem ele o texto não alinha corretamente */
+  .teacher-item > p {
+    padding: 0 32px;
+  }
+
+  .teacher-item footer p strong {
+    display: initial;
+    margin-left: 16px;
+  }
+
+  .teacher-item footer button {
+    width: 245px;
+    font-size: 16px;
+    justify-content: center;
+    font-weight: 600;
+  }
+
+  .teacher-item footer button img {
+    margin-right: 16px;
+  }
+}
