nlw2 | Next Level Week #02
UPDATE

Complete lesson 1, 2, 3 and 4.

We learned how to organize HTML, stylize with CSS, create application intelligence with Javascript. All within good practices.

--- a/public/styles/partials/header.css
+++ b/public/styles/partials/header.css
@@ -49,7 +49,7 @@
     font-size: 1.6rem;;
     line-height: 2.6rem;
     color: var(--color-title-in-primary);
-    margin-top: 2.4rem;
+    margin-top: 2.4;
 }
 
 /* Media Queries */
