--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -72,16 +72,9 @@
                         <label for="subject">Matéria</label>
                         <select name="subject" id="subject" required>
                             <option value="">Selecione uma opção</option>
-                            <option value="1">Artes</option>
-                            <option value="2">Biologia</option>
-                            <option value="3">Ciências</option>
-                            <option value="4">Educação Física</option>
-                            <option value="5">Física</option>
-                            <option value="6">Geografia</option>
-                            <option value="7">História</option>
-                            <option value="8">Matemática</option>
-                            <option value="9">Português</option>
-                            <option value="10">Química</option>
+                            {%for subject in subjects %}
+                                <option value="{{loop.index}}">{{subject}}</option>
+                            {%endfor%}
                         </select>
                     </div>
 
@@ -89,7 +82,7 @@
                         <label for="cost">Custo da sua hora/aula
                             <small>(R$)</small>
                         </label>
-                        <input type="cost" id="cost" type="number required">
+                        <input name="cost" type="cost" id="cost" type="number" required>
                     </div>
                 </fieldset>
 
@@ -105,13 +98,11 @@
                             <label for="weekday">Dia da semana</label>
                             <select name="weekday[]" required><!--os colchetes após weekday são para quando há mais de um valor no backend-->
                                 <option value="">Selecione uma opção</option>
-                                <option value="0">Domingo</option>
-                                <option value="1">Segunda-feira</option>
-                                <option value="2">Terça-feira</option>
-                                <option value="3">Quarta-feira</option>
-                                <option value="4">Quinta-feira</option>
-                                <option value="5">Sexta-feira</option>
-                                <option value="6">Sábado</option>
+                                
+                                {%for weekday in weekdays %}
+                                    <option value="{{loop.index0}}">{{weekday}}</option>
+                                {%endfor%}
+                                
                             </select>
                         </div>
 
