--- a/public/styles/partials/forms.css
+++ b/public/styles/partials/forms.css
@@ -44,4 +44,10 @@ textarea-block:focus-within::after {
     right: 1.6rem;
     bottom: 0px;
 }
+
+label small {
+    font-size: 1.2rem;
+    padding-left: 1.2rem;
+    color: var(--color-small-info);
+}
 /* Final Formulários */
