--- a/src/views/study.html
+++ b/src/views/study.html
@@ -36,17 +36,11 @@
                     <div class="select-block">
                         <label for="subject">Matéria</label>
                         <select name="subject" id="subject">
-                            <option value="" disabled="" hidden="">Selecione uma opção</option>
-                            <option value="1">Artes</option>
-                            <option value="2">Biologia</option>
-                            <option value="3">Ciências</option>
-                            <option value="4">Educação Física</option>
-                            <option value="5">Física</option>
-                            <option value="6">Geografia</option>
-                            <option value="7">História</option>
-                            <option value="8">Matemática</option>
-                            <option value="9">Português</option>
-                            <option value="10">Química</option>
+
+                            {%for subject in subjects %}
+                                <option value="{{loop.index}}" {{ "selected" if filters.subject == loop.index }} >{{subject}}</option>
+                            {%endfor%}
+                            
                         </select>
                     </div>
 
@@ -54,21 +48,18 @@
                     <div class="select-block">
                         <label for="weekday">Dia da semana</label>
                         <select name="weekday" id="weekday">
-                            <option value="" disabled="" hidden="">Selecione uma opção</option>
-                            <option value="0">Domingo</option>
-                            <option value="1">Segunda-feira</option>
-                            <option value="2">Terça-feira</option>
-                            <option value="3">Quarta-feira</option>
-                            <option value="4">Quinta-feira</option>
-                            <option value="5">Sexta-feira</option>
-                            <option value="6">Sábado</option>
+
+                            {%for weekday in weekdays %}
+                                <option value="{{loop.index0}}" {{ "selected" if filters.weekday == loop.index0 }} >{{weekday}}</option>
+                            {%endfor%}
+
                         </select>
                     </div>
 
                     <!-- Relógio -->
                     <div class="input-block">
-                        <label for="time">Hora (De 0 até 24)</label>
-                        <input name="time" id="time" type="time">
+                        <label for="time">Hora</label>
+                        <input name="time" id="time" type="time" value="{{filters.time}}">
                     </div>
 
                     <!-- Button para envio do form-->
@@ -79,28 +70,32 @@
         </header>
 
         <main>
-            <article class="teacher-item">
-                <header>
-                    <img 
-                        src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" 
-                        alt="Diego Fernandes">
-                    <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
-                    </div>
-                </header>
-            
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
-            
-                <footer>
-                    <p>Preço/hora<strong>R$ 20,00</strong>
-                    </p>
-                    <button type="button">
-                        <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-                    </button>
-                </footer>
-            </article>
 
+            {%for proffy in proffys %}
+                <article class="teacher-item">
+                    <header>
+                        <img 
+                            src="{{proffy.avatar}}" 
+                            alt="{{proffy.name}}">
+                        <div>
+                            <strong>{{proffy.name}}</strong>
+                            <span>{{proffy.subject}}</span>
+                        </div>
+                    </header>
+                
+                    <p id="bio">{{proffy.bio}}</p>
+                
+                    <footer>
+                        <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
+                        </p>
+                        <a href="https://api.whatsapp.com/send?1=pt_BR&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
+                            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                        </a>
+                    </footer>
+                </article>
+            {%endfor%}
+            
+<!--
             <article class="teacher-item">
                 <header>
                     <img 
@@ -122,6 +117,7 @@
                     </button>
                 </footer>
             </article>
+            -->
         </main>
     </div>
 
